2015-01-27  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocihandle.c, ext/oci8/ocinumber.c, ext/oci8/oradate.c,
	  ext/oci8/stmt.c: Suppreess warnings: "[warn]: @param tag has unknown parameter name: xxx"
            by yard.

2015-01-20  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: Add OCI8#send_timeout, OCI8#send_timeout=,
	    OCI8#recv_timeout and OCI8#recv_timeout=.

2015-01-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c, ext/oci8/oci8.c, ext/oci8/oci8.h:
	    Fix for cancel_read_at_exit on Windows.

2015-01-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c, ext/oci8/oci8lib.c, lib/oci8/properties.rb:
	    Add OCI8.properties[:cancel_read_at_exit].

2015-01-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb, ext/oci8/hook_funcs.c, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, ext/oci8/oci8lib.c, ext/oci8/plthook.h,
	  ext/oci8/plthook_elf.c, ext/oci8/plthook_osx.c,
	  ext/oci8/plthook_win32.c: Cancel read system calls at exit
	    not to block ruby process termination.
	    This works on Linux, OSX and Windows Vista or upper.
	    (github issue #56)

2015-01-12  Kubo Takehiro  <kubo@jiubao.org>
	* README.md: Fix a broken link.
	    (github issue #67 reported by Zloy)

2014-12-30  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/oci8lib.c: Revise type checking of LOB.

2014-12-30  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/connection_pool.c, ext/oci8/lob.c,
	  ext/oci8/metadata.c, ext/oci8/object.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c, ext/oci8/ocihandle.c, ext/oci8/stmt.c:
	    Add oci8_check_typeddata() and use it instead of oci8_get_handle()
	    and oci8_get_bind().

2014-12-30  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oradate.c: Add check_oradate() to check datatype.

2014-12-30  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/metadata.c, ext/oci8/object.c, ext/oci8/stmt.c:
	    Add more write barriers.

2014-12-29  Kubo Takehiro  <kubo@jiubao.org>